--- a/InterCore/signup_page.html
+++ b/InterCore/signup_page.html
@@ -13,15 +13,12 @@
     <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
-
         .font-family-karla {
             font-family: karla;
         }
     </style>
 </head>
-<body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
-<body class="bg-white font-family-karla h-screen">
-
+<body class="h-screen overflow-hidden flex items-center justify-center bg-white font-family-karla h-screen" style="background: #edf2f7;">
     <div class="w-full flex flex-wrap">
 
         <!-- Image Section -->
