--- a/InterCore/signup_page.html
+++ b/InterCore/signup_page.html
@@ -23,9 +23,8 @@
 
         <!-- Image Section -->
         <div class="w-1/2 shadow-2xl">
-            <img class="object-cover w-full h-screen hidden md:block" src="img/Signuppage.jpg">
+            <img class="object-cover w-full h-screen hidden md:block" alt="image" src="img/Signuppage.jpg">
         </div>
-        
         <!-- Login Section -->
         <div class="w-full md:w-1/2 flex flex-col">
 
