--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -67,7 +67,7 @@
             <h2 >Why We Emerged</h2>
             <p class="distancefromabove">At interncore, we want to solve the problem of every college students which are……..
               </p>
-            <p class="text-muted drop-caps drop-caps-primary">Getting guidance in their careers and finding ways to enhance it without getting scammed and paying a huge sum in comparison to what they receive which is not even preparing them for their future goals.</p>
+            <p class="text-muted drop-caps drop-caps-primary">Getting guidance in their careers and finding ways to enhance it without getting scammed and paying a huge sum in comparison to what they receive which is not even preparing them for their future goals. <br> Seeing all this the core team of InturnCore</p>
           </div>
           <div class="col-lg-6"><img class="img-fluid" src="img/priest.jpg" alt=""></div>
         </div>
