--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -67,7 +67,9 @@
             <h2 >Why We Emerged</h2>
             <p class="distancefromabove">At interncore, we want to solve the problem of every college students which are……..
               </p>
-            <p class="text-muted drop-caps drop-caps-primary">Getting guidance in their careers and finding ways to enhance it without getting scammed and paying a huge sum in comparison to what they receive which is not even preparing them for their future goals. <br> Seeing all this the core team of InturnCore</p>
+            <p class="text-muted drop-caps drop-caps-primary">Getting guidance in their careers and finding ways to enhance it without getting scammed and paying a huge sum in comparison to what they receive which is not even preparing them for their future goals.
+              <p class="distancefromabove">Facing all this ourself  the core team of InternCore found as a major problrem of every college student. <br> So we came up with a solution of our own.
+            </p>
           </div>
           <div class="col-lg-6"><img class="img-fluid" src="img/priest.jpg" alt=""></div>
         </div>
@@ -88,7 +90,7 @@
           <div class="col-lg-6 mb-4">
             <h3>
               </h3>
-            <p class="lead text-muted"> hvdkgh</p>
+            <h2>Who are We</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
           </div>
           <div class="col-lg-12">
