--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -71,7 +71,7 @@
               <p class="distancefromabove">Facing all this ourself  the core team of InternCore found as a major problrem of every college student. <br> So we came up with a solution of our own.
             </p>
           </div>
-          <div class="col-lg-6"><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+          <div class="col-lg-6 descimage"><img class="img-fluid" src="img/priest.jpg" alt=""></div>
         </div>
         <div class="row">
           <div class="col-lg-6 mb-4">
@@ -91,7 +91,7 @@
             <h3>
               </h3>
             <h2>Who are We</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <p>A team of five Hands-On-Coders passionate about development who have faced the same issues while we needed internships .</p>
           </div>
           <div class="col-lg-12">
             <p class="mb-0"> </p>
