--- a/InterCore/index.html
+++ b/InterCore/index.html
@@ -459,76 +459,7 @@
       </div>
     </section>
 
-  
-    <!-- Events Section
-    <section class="py-5">
-      <div class="container py-5">
-        <header class="mb-4 text-center mb-5">
-          <p class="text-serif mb-0 text-primary">United in Spirit</p>
-          <h2 class="text-uppercase">Next Events</h2>
-        </header>
-        <div class="p-4 p-lg-5 bg-light text-center mb-4">
-          <div class="row gy-4 align-items-center">
-            <div class="col-lg-3">
-              <div
-                class="d-flex align-items-center justify-content-center justify-content-lg-start"
-              >
-                <p class="text-gray text-xl h1 mb-0">17</p>
-                <div class="ms-2">
-                  <h5 class="mb-0">April</h5>
-                  <p class="text-small mb-0 text-muted">Saturday</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 text-center">
-              <h4 class="text-primary mb-1">
-                <a class="reset-anchor" href="text.html"
-                  >Building a Church Fellowship</a
-                >
-              </h4>
-              <p class="text-serif mb-0 text-muted">
-                April 13, 2019 - October 14, 2022
-              </p>
-              <p class="text-serif mb-0 text-muted">New York</p>
-            </div>
-            <div class="col-lg-3 text-lg-end">
-              <a class="btn btn-outline-primary px-4" href="text.html"
-                >Find out more</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="p-4 p-lg-5 bg-light text-center">
-          <div class="row gy-4 align-items-center">
-            <div class="col-lg-3">
-              <div
-                class="d-flex align-items-center justify-content-center justify-content-lg-start"
-              >
-                <p class="text-gray text-xl h1 mb-0">25</p>
-                <div class="ms-2">
-                  <h5 class="mb-0">June</h5>
-                  <p class="text-small mb-0 text-muted">Monday</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 text-center">
-              <h4 class="text-primary mb-1">
-                <a class="reset-anchor" href="text.html">Sermon: Hope For Us</a>
-              </h4>
-              <p class="text-serif mb-0 text-muted">
-                April 13, 2019 - October 14, 2022
-              </p>
-              <p class="text-serif mb-0 text-muted">New York</p>
-            </div>
-            <div class="col-lg-3 text-lg-end">
-              <a class="btn btn-outline-primary px-4" href="text.html"
-                >Find out more</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>-->
+
     <!-- Resume Section-->
     <section id="Resume">
       <div class="container-fluid px-0">
@@ -633,7 +564,7 @@
                 <li class="mb-2">
                   <a
                     class="reset-anchor"
-                    href="tel:+0035478968"
+                    href="https://www.instagram.com/we.interncore/"
                     target="_blank"
                   >
                     <i class="text-primary me-3 fab fa-instagram"></i>
@@ -641,13 +572,13 @@
                   >
                 </li>
                 <li class="mb-2">
-                  <a class="reset-anchor" href="text.html" target="_blank">
+                  <a class="reset-anchor" href="https://www.linkedin.com/company/interncore/" target="_blank">
                     <i class="text-primary me-3 fab fa-linkedin-in"></i
                     ><span> Reach us on Linkedin</span></a
                   >
                 </li>
                 <li class="mb-2">
-                  <a class="reset-anchor" href="mailto:church@example.com">
+                  <a class="reset-anchor" href="mailto:we.interncore@gmail.com" target="_blank">
                     <i class="text-primary me-3 far fa-envelope"></i
                     ><span>Reach us on Email</span></a
                   >
@@ -686,22 +617,22 @@
   
   <section class="d-flex justify-content-center  p-4 border-bottom">
     <div>
-      <a href="" class="me-4 text-reset">
+      <a href="" target="_blank" class="me-4 text-reset">
         <i class="fab fa-facebook-f "></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://twitter.com/home" target="_blank" class="me-4 text-reset">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="" target="_blank" class="me-4 text-reset">
         <i class="fab fa-google"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.instagram.com/" target="_blank" class="me-4 text-reset">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.linkedin.com/feed/" target="_blank" class="me-4 text-reset">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="" target="_blank" class="me-4 text-reset">
         <i class="fab fa-github"></i>
       </a>
     </div>
