--- a/aboutus.html
+++ b/aboutus.html
@@ -442,6 +442,23 @@
               >Know more</a
             >
           </div>
+          <div class="foundersPhoto">
+            <div>
+              Anurag Rawat
+            </div>
+            <div>
+              Aryan Raj
+            </div>
+            <div>
+              Harshit Roy
+            </div>
+            <div>
+              Kritik Srivastava
+            </div>
+            <div>
+              Vivek Bhatt
+            </div>
+          </div>
         </div>
       </div>
     </section>
