--- a/aboutus.html
+++ b/aboutus.html
@@ -404,9 +404,9 @@
     <section class="bg-primary-shade text-white py-5" id="events">
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col-lg-9 text-lg-start  mb-4 mb-lg-0">
+          <!-- <div class="col-lg-9 text-lg-start  mb-4 mb-lg-0">
             <h2 class="mb-0 text-uppercase">About us</h2>
-          </div>
+          </div> -->
            <!-- <div class="col-lg-6 text-center mb-4 mb-lg-0">
             <p class="text-serif">Experience God’s Presence</p>
             <div
@@ -437,11 +437,11 @@
 
           </div> -->
           
-          <div class="col-lg-3 text-lg-end">
+          <!-- <div class="col-lg-3 text-lg-end">
             <a class="btn btn-outline-light px-4" href="aboutus.html"
               >Know more</a
             >
-          </div>
+          </div> -->
           <div class="foundersPhoto">
             <div>
               Anurag Rawat
