--- a/aboutus.html
+++ b/aboutus.html
@@ -403,7 +403,7 @@
     </section>
     <section class="bg-primary-shade text-white py-5" id="events">
       <div class="container text-center">
-        <div class="row align-items-center">
+        <div class="col-lg-5 align-items-center">
           <!-- <div class="col-lg-9 text-lg-start  mb-4 mb-lg-0">
             <h2 class="mb-0 text-uppercase">About us</h2>
           </div> -->
