--- a/aboutus.html
+++ b/aboutus.html
@@ -443,19 +443,19 @@
             >
           </div> -->
           <div class="foundersPhoto col-lg-5">
-            <div>
+            <div class="col">
               Anurag Rawat
             </div>
-            <div>
+            <div class="col">
               Aryan Raj
             </div>
-            <div>
+            <div class="col">
               Harshit Roy
             </div>
-            <div>
+            <div class="col">
               Kritik Srivastava
             </div>
-            <div>
+            <div class="col">
               Vivek Bhatt
             </div>
           </div>
