--- a/aboutus.html
+++ b/aboutus.html
@@ -402,7 +402,7 @@
 <br>
     </section>
     <section class="bg-primary-shade text-white py-5" id="events">
-      <div class="container text-center">
+      <div class="container">
         <div class="row align-items-center">
           <!-- <div class="col-lg-9 text-lg-start  mb-4 mb-lg-0">
             <h2 class="mb-0 text-uppercase">About us</h2>
@@ -442,7 +442,7 @@
               >Know more</a
             >
           </div> -->
-          <div class="foundersPhoto col-lg-5">
+          
             <div class="col">
               Anurag Rawat
             </div>
@@ -458,7 +458,7 @@
             <div class="col">
               Vivek Bhatt
             </div>
-          </div>
+          
         </div>
       </div>
     </section>
