--- a/aboutus.html
+++ b/aboutus.html
@@ -403,7 +403,7 @@
     </section>
     <section class="bg-primary-shade text-white py-5" id="events">
       <div class="container">
-        <div class="col align-items-center">
+        <div class="col align-self-center">
           Co-Founders
         </div>
         <div class="row align-items-center">
